handle next page

--- a/templates/game.html
+++ b/templates/game.html
@@ -21,6 +21,10 @@
         window.location.replace("/");
     });
 
+    socket.on('next_page', () => {
+        alert("next page")
+    });
+
     async function boot() {
         const ticker = setInterval(async () => {
             await updateGame();
