--- a/static/styles.css
+++ b/static/styles.css
@@ -124,3 +124,43 @@ button.beautiful:hover {
     gap: 10px;
     height: 45px;
 }
+
+canvas {
+    background-color: white;
+    border-radius: 15px;
+    border: 5px solid rgb(230, 230, 230);
+}
+
+#drawingSection div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 15px;
+}
+
+#drawingSection div button {
+    margin-left: auto;
+    color: black;
+    background-color: rgb(240, 240, 240);
+    border-radius: 5px;
+    transition: 0.1s;
+}
+
+#drawingSection div button:hover {
+    filter: brightness(0.95);
+}
+
+#drawingSection div div {
+    background-color: rgba(0, 0, 0, 0.1);
+    height: 40px;
+}
+
+.draw-part {
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    padding: 0 10px;
+}
+
+.draw-parts {
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    padding: 0 10px;
+}
