set_page command instead and clear after page changed

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,7 +20,13 @@
     const connectionsElement = document.querySelector('#connections');
     const continueButton = document.querySelector("#continue");
     continueButton.addEventListener("click", (event) => {
-        socket.emit('next_page');
+        socket.emit('set_page', "draw");
+        setTimeout(() => {
+            socket.emit('set_page', "zero");
+        }, 5000);
+        setTimeout(() => {
+            socket.emit('set_page', "draw");
+        }, 10000);
     });
 
     socket.on('client_connected', (amount) => {
