--- a/templates/game.html
+++ b/templates/game.html
@@ -45,9 +45,18 @@
 
         drawingSection.style.display = "none";
 
-        socket.on('next_page', () => {
-            noneSection.style.display = "none";
-            drawingSection.style.display = "block";
+        socket.on('set_page', (page) => {
+            if (page === "draw") {
+                noneSection.style.display = "none";
+                drawingSection.style.display = null;
+            } else {
+                noneSection.style.display = null;
+                drawingSection.style.display = "none";
+            }
+
+            if (page !== "draw") {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+            }
         });
 
         canvas.addEventListener('mousedown', () => drawing = true);
