--- a/templates/game.html
+++ b/templates/game.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+    <div id="timer" style="display: flex">30</div>
+
     <div id="noneSection">
         <h1 id="noneTitle">You're in!</h1>
         <p>Please wait for further instructions</p>
