--- a/static/styles.css
+++ b/static/styles.css
@@ -170,3 +170,32 @@ canvas {
     border: 2px solid rgba(255, 255, 255, 0.1);
     padding: 0 10px;
 }
+
+#timer {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    border-radius: 50%;
+
+    top: 10px;
+    right: 10px;
+    cursor: default;
+    user-select: none;
+    animation: 0.2s popin;
+}
+
+@keyframes popin {
+    from {
+        transform: scale(2);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
