--- a/templates/game.html
+++ b/templates/game.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div id="timer" style="display: flex">30</div>
+    <div id="timer" style="display: none">30</div>
 
     <div id="noneSection">
         <h1 id="noneTitle">You're in!</h1>
@@ -135,20 +135,27 @@
         const drawingSection = document.getElementById('drawingSection');
         const noneSection = document.getElementById('noneSection');
         const noneTitle = document.getElementById('noneTitle');
+        const timerElement = document.getElementById("timer");
         let drawing = false;
         let currentColor = "#000000";
         let brushSize = 5;
+        let drawingTimer = 30;
+        let currentPage = "zero";
 
         socket.emit('identify', {'username': "{{ username }}"});
 
         drawingSection.style.display = "none";
 
         socket.on('set_page', (page) => {
+            currentPage = page;
+
             if (page === "draw") {
                 noneSection.style.display = "none";
+                timerElement.style.display = null;
                 drawingSection.style.display = null;
             } else {
                 noneSection.style.display = null;
+                timerElement.style.display = "none";
                 drawingSection.style.display = "none";
                 noneTitle.innerText = phrases[Math.floor(Math.random() * phrases.length)];
             }
@@ -229,7 +236,25 @@
         }
 
         async function updateGame() {
+            if (currentPage !== "draw") {
+                drawingTimer = 30;
+                return;
+            }
 
+            drawingTimer -= 0.2;
+
+            if (drawingTimer < 0) {
+                drawingTimer = 30;
+                return;
+            }
+
+            if (drawingTimer < 5) {
+                timerElement.style.animation = 'shake 0.05s infinite'
+            } else {
+                timerElement.style.animation = null;
+            }
+
+            timerElement.innerText = parseInt(Math.ceil(drawingTimer));
         }
 
         boot();
