--- a/templates/game.html
+++ b/templates/game.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+    <div id="username"><p>{{ username }}</p></div>
     <div id="timer" style="display: none">30</div>
 
     <div id="noneSection">
