--- a/templates/game.html
+++ b/templates/game.html
@@ -156,6 +156,12 @@
 
         drawingSection.style.display = "none";
 
+        socket.on('rating_data', data => {
+            for (let user of data['users']) {
+                ratingSectionImages.innerHTML += `<img draggable=false src='/drawing/${user}'/>`
+            }
+        });
+
         socket.on('set_page', (page) => {
             currentPage = page;
 
