--- a/static/styles.css
+++ b/static/styles.css
@@ -223,6 +223,37 @@ canvas {
     margin-left: 20px;
 }
 
+#ratingSection {
+    position: absolute;
+    top: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#ratingSectionImages {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+    max-width: 1100px;
+}
+
+#ratingSectionImages img {
+    height: 200px;
+    background-color: white;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+#ratingSectionImages img:hover {
+    filter: brightness(0.92);
+}
+
 @keyframes popin {
     from {
         right: 30px;
