--- a/templates/game.html
+++ b/templates/game.html
@@ -9,7 +9,7 @@
     </div>
 
     <div id="ratingSection" style="display: none">
-        <h1>Click your favorite!</h1>
+        <h1>Pick your favorite!</h1>
         <p>You cannot change your choice later.</p>
 
         <div id="ratingSectionImages"></div>
