--- a/templates/monitor.html
+++ b/templates/monitor.html
@@ -22,6 +22,9 @@
             let clientElement = document.createElement('p');
             clientElement.id = "client-" + data;
             clientElement.innerText = data['username'];
+            clientElement.addEventListener('click', async (event) => {
+                socket.emit('kick', data['username']);
+            });
             clientsElement.append(clientElement);
         });
 
